--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -5,6 +5,7 @@
 
 @import "./../../components/Nav/Nav";
 @import "./../../components/Nav/NavLinks/NavLinks";
+@import "./../../components/Footer/Footer";
 @import "./../../components/pages/MainPage/MainPage";
 @import "./../../components/pages/Home/Home";
 @import "./../../components/pages/MainPage/Headings/SubHeading/SubHeading";
