--- a/src/components/Nav/_Nav.scss
+++ b/src/components/Nav/_Nav.scss
@@ -1,37 +1,88 @@
 .Nav {
   position: fixed;
-  display: flex;
-  align-items: center;
-  width: 100%;
   padding: 2.5rem;
+  width: 100%;
   z-index: 100;
   background-color: $trans-white;
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(7px);
 
-  .theme-shift {
-    cursor: pointer;
-    height: 3.5rem;
-    width: 3.5rem;
-    background-color: $theme-btn;
-    border: 1px solid $theme-btn;
-    border-radius: 4px;
+  .wrapper {
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: space-between;
 
-    .theme-icon {
-      font-size: 1.5rem;
+    .theme-shift {
+      cursor: pointer;
+      height: 3.5rem;
+      width: 3.5rem;
+      background-color: $theme-btn;
+      border: 1px solid $theme-btn;
+      border-radius: 4px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      .theme-icon {
+        font-size: 1.5rem;
+      }
+    }
+
+    .links {
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      margin-left: 1rem;
+
+      a:not(:last-of-type) {
+        margin-right: 1rem;
+      }
     }
   }
+}
 
-  .links {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-left: 1rem;
+@media only screen and (min-width: 700px) {
+  .Nav {
+    padding: 4.5rem 2rem;
 
-    a:not(:last-of-type) {
-      margin-right: 1rem;
+    .wrapper {
+      .theme-shift {
+        height: 3.5rem;
+        width: 3.5rem;
+        background-color: $theme-btn;
+        border: 1px solid $theme-btn;
+        border-radius: 4px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .theme-icon {
+          font-size: 1.5rem;
+        }
+      }
+
+      .links {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        margin-left: 0;
+
+        a {
+          p {
+            font-size: 2rem;
+            margin-right: 4rem;
+          }
+        }
+
+        a:not(:last-of-type) {
+          // margin-right: 4rem;
+        }
+      }
     }
+  }
+}
+
+@media only screen and (min-width: 770px) {
+  .Nav {
+    padding: 4rem 12%;
   }
 }
