--- a/src/components/pages/MainPage/Headings/PrimaryHeading/_PrimaryHeading.scss
+++ b/src/components/pages/MainPage/Headings/PrimaryHeading/_PrimaryHeading.scss
@@ -3,3 +3,11 @@
     font-size: 2.5rem;
   }
 }
+
+@media only screen and (min-width: 700px) {
+  .PrimaryHeading {
+    h1 {
+      font-size: 4rem;
+    }
+  }
+}
