--- a/src/components/pages/MainPage/Headings/SubHeading/_SubHeading.scss
+++ b/src/components/pages/MainPage/Headings/SubHeading/_SubHeading.scss
@@ -3,3 +3,11 @@
     font-size: 2.2rem;
   }
 }
+
+@media only screen and (min-width: 700px) {
+  .SubHeading {
+    h2 {
+      font-size: 3.5rem;
+    }
+  }
+}
