--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -14,9 +14,13 @@ body {
   box-sizing: border-box; }
 
 .App {
-  position: relative; }
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; }
   .App .pages {
-    padding: 8rem 2.5rem 0 2.5rem; }
+    padding: 8rem 2.5rem 0 2.5rem;
+    flex: 1; }
 
 .headings {
   margin-bottom: 4rem; }
@@ -30,34 +34,83 @@ body {
     line-height: 25px;
     font-weight: 400; }
 
+@media only screen and (min-width: 700px) {
+  .App .pages {
+    padding: 12rem 2.5rem 0 2.5rem; }
+  .headings {
+    margin-bottom: 4rem; }
+    .headings p {
+      font-size: 1.8rem; } }
+
+@media only screen and (min-width: 770px) {
+  .App .pages {
+    padding: 12rem 20% 0 20%; } }
+
+@media only screen and (min-width: 1000px) {
+  .App .pages {
+    padding: 12rem 28% 0 28%; } }
+
+@media only screen and (min-width: 1440px) {
+  .App .pages {
+    padding: 12rem 32% 0 32%; } }
+
 .Nav {
   position: fixed;
-  display: flex;
-  align-items: center;
-  width: 100%;
   padding: 2.5rem;
+  width: 100%;
   z-index: 100;
   background-color: #ffffffc7;
-  backdrop-filter: blur(10px); }
-  .Nav .theme-shift {
-    cursor: pointer;
-    height: 3.5rem;
-    width: 3.5rem;
-    background-color: #e5e7eb;
-    border: 1px solid #e5e7eb;
-    border-radius: 4px;
+  backdrop-filter: blur(7px); }
+  .Nav .wrapper {
     display: flex;
-    justify-content: center;
-    align-items: center; }
-    .Nav .theme-shift .theme-icon {
-      font-size: 1.5rem; }
-  .Nav .links {
-    display: flex;
-    justify-content: space-evenly;
     align-items: center;
-    margin-left: 1rem; }
-    .Nav .links a:not(:last-of-type) {
-      margin-right: 1rem; }
+    justify-content: space-between; }
+    .Nav .wrapper .theme-shift {
+      cursor: pointer;
+      height: 3.5rem;
+      width: 3.5rem;
+      background-color: #e5e7eb;
+      border: 1px solid #e5e7eb;
+      border-radius: 4px;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+      .Nav .wrapper .theme-shift .theme-icon {
+        font-size: 1.5rem; }
+    .Nav .wrapper .links {
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      margin-left: 1rem; }
+      .Nav .wrapper .links a:not(:last-of-type) {
+        margin-right: 1rem; }
+
+@media only screen and (min-width: 700px) {
+  .Nav {
+    padding: 4.5rem 2rem; }
+    .Nav .wrapper .theme-shift {
+      height: 3.5rem;
+      width: 3.5rem;
+      background-color: #e5e7eb;
+      border: 1px solid #e5e7eb;
+      border-radius: 4px;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+      .Nav .wrapper .theme-shift .theme-icon {
+        font-size: 1.5rem; }
+    .Nav .wrapper .links {
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      margin-left: 0; }
+      .Nav .wrapper .links a p {
+        font-size: 2rem;
+        margin-right: 4rem; } }
+
+@media only screen and (min-width: 770px) {
+  .Nav {
+    padding: 4rem 12%; } }
 
 .NavLinks {
   width: 100%;
@@ -65,11 +118,51 @@ body {
   color: #000;
   text-decoration: none; }
 
+.Footer {
+  padding: 1rem 2.5rem 0 2.5rem; }
+  .Footer div {
+    border-top: 1px solid #e5e7eb;
+    padding: 2rem 0;
+    display: flex;
+    flex-direction: column; }
+    .Footer div a {
+      margin-bottom: 0.5rem;
+      font-size: 1.6rem;
+      text-decoration: none;
+      color: #000; }
+
+@media only screen and (min-width: 770px) {
+  .Footer {
+    padding: 1rem 20% 0 20%; } }
+
+@media only screen and (min-width: 1000px) {
+  .Footer {
+    padding: 12rem 28% 0 28%; } }
+
+@media only screen and (min-width: 1440px) {
+  .Footer {
+    padding: 12rem 32% 0 32%; } }
+
+.Home .show-more {
+  text-align: center;
+  text-decoration: none; }
+  .Home .show-more p {
+    color: #000;
+    font-weight: 500; }
+
 .SubHeading h2 {
   font-size: 2.2rem; }
 
+@media only screen and (min-width: 700px) {
+  .SubHeading h2 {
+    font-size: 3.5rem; } }
+
 .PrimaryHeading h1 {
   font-size: 2.5rem; }
+
+@media only screen and (min-width: 700px) {
+  .PrimaryHeading h1 {
+    font-size: 4rem; } }
 
 .ProjectItem {
   cursor: pointer;
@@ -108,3 +201,19 @@ body {
     color: #000;
     font-size: 1.2rem;
     font-style: italic; }
+
+.GitHubBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .GitHubBtn a {
+    padding: 0.5rem 1rem;
+    text-decoration: none;
+    border: 1px solid #e5e7eb;
+    border-radius: 3px; }
+    .GitHubBtn a p {
+      font-size: 1.7rem;
+      color: #000;
+      margin: auto 0; }
+      .GitHubBtn a p span {
+        font-size: 1.7rem; }
