--- a/src/styles/scss/_vars.scss
+++ b/src/styles/scss/_vars.scss
@@ -1,7 +1,9 @@
 $white: #fff;
+$dark-mode-white: #dfdbdb;
 $trans-white: #ffffffc7;
 $black: #000;
 $gray: #7b8086;
 $theme-btn: #e5e7eb;
 $tags-bk: #f5f5f5;
 $secondary-font: #4b4f53;
+$green: #61b15a;
