--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -14,5 +14,7 @@
 @import "./../../components/pages/Portfolio/ProjectItem/ProjectItem";
 @import "./../../components/pages/Portfolio/ProjectItem/ProjectTags/ProjectTags";
 @import "./../../components/pages/Portfolio/GitHubBtn/GitHubBtn";
+@import "./../../components/pages/Home/Timeline/Timeline";
+@import "./../../components/pages/Home/Timeline/TimelineInfo/TimelineInfo";
 
 // @import './../../components';
