Added server, api, and added api functionality to the blogs page

--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -10,6 +10,9 @@
 @import "./../../components/pages/Home/Home";
 @import "./../../components/pages/MainPage/Headings/SubHeading/SubHeading";
 @import "./../../components/pages/MainPage/Headings/PrimaryHeading/PrimaryHeading";
+@import "./../../components/pages/Blog/Blog";
+@import "./../../components/pages/Blog/BlogItem/BlogItem";
+@import "./../../components/pages/Blog/BlogPost/BlogPost";
 @import "./../../components/pages/Portfolio/Portfolio";
 @import "./../../components/pages/Portfolio/ProjectItem/ProjectItem";
 @import "./../../components/pages/Portfolio/ProjectItem/ProjectTags/ProjectTags";
