--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -26,12 +26,21 @@ body {
   .dark-mode h4,
   .dark-mode a,
   .dark-mode p,
+  .dark-mode .Footer a,
   .dark-mode .Home .show-more p,
   .dark-mode .GitHubBtn a p,
+  .dark-mode .Blog .search-posts,
   .dark-mode .ProjectItem .project-content .project-title,
   .dark-mode .ProjectItem .project-img,
   .dark-mode .icon {
     color: #fff; }
+  .dark-mode .Blog .search-posts,
+  .dark-mode .Blog .search-posts input {
+    border-color: #1f2937;
+    background-color: #1f2937; }
+  .dark-mode .BlogItem .title-views p,
+  .dark-mode .BlogItem .post-desc p {
+    color: #7b8086; }
   .dark-mode .TimelineInfo .info p {
     color: #dfdbdb; }
   .dark-mode .PrimaryHeading p,
@@ -45,6 +54,8 @@ body {
     border-color: #4b4f53; }
     .dark-mode .ProjectItem:hover {
       box-shadow: none; }
+  .dark-mode ::placeholder {
+    color: #fff; }
 
 .App {
   position: relative;
@@ -196,6 +207,84 @@ body {
 @media only screen and (min-width: 700px) {
   .PrimaryHeading h1 {
     font-size: 4rem; } }
+
+.Blog {
+  width: 100%; }
+  .Blog .search-posts {
+    cursor: text;
+    width: 100%;
+    margin-bottom: 1rem;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid #e5e7eb;
+    border-radius: 6px; }
+    .Blog .search-posts .search-icon,
+    .Blog .search-posts input {
+      font-size: 2rem; }
+    .Blog .search-posts .search-icon {
+      width: 10%; }
+    .Blog .search-posts input {
+      height: 100%;
+      outline: none;
+      width: 90%;
+      border: none; }
+  .Blog .subhead-margin {
+    margin-top: 4rem; }
+
+::placeholder {
+  font-family: "Inter", sans-serif; }
+
+.BlogItem {
+  cursor: pointer;
+  text-decoration: none; }
+  .BlogItem .title-views h3 {
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: #000; }
+  .BlogItem .title-views p {
+    margin: 0.5rem 0;
+    font-size: 1.3rem; }
+  .BlogItem .post-desc {
+    font-size: 1.5rem;
+    margin-bottom: 3rem; }
+
+@media only screen and (min-width: 500px) {
+  .BlogItem .title-views {
+    margin-bottom: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+    .BlogItem .title-views h3 {
+      font-size: 1.8rem; }
+    .BlogItem .title-views p {
+      font-size: 1.5rem; }
+  .BlogItem .post-desc {
+    font-size: 1.5rem; } }
+
+.BlogPost {
+  margin-top: 0.4rem;
+  max-width: 100%;
+  width: 100%; }
+  .BlogPost .back-icon {
+    cursor: pointer;
+    font-size: 2rem;
+    margin-bottom: 1rem; }
+  .BlogPost .post-title {
+    margin-bottom: 1rem; }
+    .BlogPost .post-title h1 {
+      font-size: 2.5rem; }
+  .BlogPost .author {
+    margin-bottom: 1.5rem; }
+    .BlogPost .author .auth-name {
+      margin-bottom: 0.3rem;
+      font-size: 1.3rem; }
+    .BlogPost .author .art-views {
+      font-size: 1.1rem; }
+  .BlogPost .img img {
+    max-width: 100%;
+    max-height: 100%; }
 
 .ProjectItem {
   cursor: pointer;
