--- a/src/styles/scss/_base.scss
+++ b/src/styles/scss/_base.scss
@@ -35,12 +35,25 @@ body {
   h4,
   a,
   p,
+  .Footer a,
   .Home .show-more p,
   .GitHubBtn a p,
+  .Blog .search-posts,
   .ProjectItem .project-content .project-title,
   .ProjectItem .project-img,
   .icon {
     color: $white;
+  }
+
+  .Blog .search-posts,
+  .Blog .search-posts input {
+    border-color: $mat-black;
+    background-color: $mat-black;
+  }
+
+  .BlogItem .title-views p,
+  .BlogItem .post-desc p {
+    color: $gray;
   }
 
   .TimelineInfo .info p {
@@ -65,6 +78,10 @@ body {
     &:hover {
       box-shadow: none;
     }
+  }
+
+  ::placeholder {
+    color: $white;
   }
 }
 
