--- a/src/components/pages/Blog/_Blog.scss
+++ b/src/components/pages/Blog/_Blog.scss
@@ -1,6 +1,10 @@
 .Blog {
   width: 100%;
 
+  .queried-items {
+    margin-top: 3rem;
+  }
+
   .search-posts {
     cursor: text;
     width: 100%;
