--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -13,6 +13,7 @@
 @import "./../../components/pages/Blog/Blog";
 @import "./../../components/pages/Blog/BlogItem/BlogItem";
 @import "./../../components/pages/Blog/BlogPost/BlogPost";
+@import "./../../components/pages/Blog/BlogPost/BodyText/BodyText";
 @import "./../../components/pages/Portfolio/Portfolio";
 @import "./../../components/pages/Portfolio/ProjectItem/ProjectItem";
 @import "./../../components/pages/Portfolio/ProjectItem/ProjectTags/ProjectTags";
