--- a/src/components/Nav/_Nav.scss
+++ b/src/components/Nav/_Nav.scss
@@ -83,6 +83,18 @@
 
 @media only screen and (min-width: 770px) {
   .Nav {
+    padding: 4rem 12%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .Nav {
+    padding: 4rem 20%;
+  }
+}
+
+@media only screen and (min-width: 1640px) {
+  .Nav {
     padding: 4rem 25%;
   }
 }
