Created dynamically generated components based on my public github repos using the github api, also fixed some bugs.

--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -13,6 +13,8 @@
 @import "./../../components/pages/Blog/Blog";
 @import "./../../components/pages/Blog/BlogItem/BlogItem";
 @import "./../../components/pages/Blog/BlogPost/BlogPost";
+@import "./../../components/pages/Blog/PostEditor/PostEditor";
+@import "./../../components/pages/Blog/PostEditor/Editor/Editor";
 @import "./../../components/pages/Blog/BlogPost/BodyText/BodyText";
 @import "./../../components/pages/Portfolio/Portfolio";
 @import "./../../components/pages/Portfolio/ProjectItem/ProjectItem";
