--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -305,6 +305,42 @@ body {
       max-width: 100%;
       max-height: 100%; }
 
+.PostEditor {
+  padding-top: 4rem; }
+  .PostEditor__editor {
+    width: 100%; }
+
+.Editor {
+  width: 100%;
+  border: 2px solid #000;
+  border-radius: 3px; }
+  .Editor__tools, .Editor__textarea {
+    padding: 2rem; }
+  .Editor__tools {
+    display: flex;
+    border-bottom: 2px solid #000; }
+    .Editor__tools div:not(:last-of-type) {
+      margin-right: 2rem; }
+    .Editor__tools .edit-icons {
+      cursor: pointer;
+      margin-right: 0.8rem;
+      font-size: 2rem;
+      color: #4b4f53;
+      transition: all 0.1s; }
+      .Editor__tools .edit-icons:hover {
+        color: #000; }
+    .Editor__tools--font-changers {
+      display: flex; }
+  .Editor__textarea {
+    outline: none;
+    padding: 1.5rem;
+    width: 100%;
+    min-height: 20rem;
+    resize: vertical;
+    font: inherit;
+    font-size: 1.7rem;
+    border: none; }
+
 .BodyText {
   margin-bottom: 4rem;
   width: 100%; }
@@ -312,6 +348,9 @@ body {
     font-size: 2.3rem;
     font-weight: 400;
     line-height: 35px; }
+
+.github-btn {
+  margin-bottom: 3rem; }
 
 .ProjectItem {
   cursor: pointer;
