--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -22,5 +22,6 @@
 @import "./../../components/pages/Portfolio/GitHubBtn/GitHubBtn";
 @import "./../../components/pages/Home/Timeline/Timeline";
 @import "./../../components/pages/Home/Timeline/TimelineInfo/TimelineInfo";
+@import "./../../components/animations/ProjectLoader/ProjectLoader";
 
 // @import './../../components';
