Added github loader to home and projects pages.

--- a/src/components/pages/Home/_Home.scss
+++ b/src/components/pages/Home/_Home.scss
@@ -1,4 +1,11 @@
 .Home {
+  .loader {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   .show-more {
     text-align: center;
     text-decoration: none;
