--- a/src/components/animations/ProjectLoader/_ProjectLoader.scss
+++ b/src/components/animations/ProjectLoader/_ProjectLoader.scss
@@ -7,15 +7,55 @@
   }
 }
 
+@keyframes addDots {
+  25% {
+    content: ".";
+  }
+
+  50% {
+    content: "..";
+  }
+
+  75% {
+    content: "...";
+  }
+
+  100% {
+    content: "";
+  }
+}
+
 .ProjectLoader {
-  width: fit-content;
-  height: fit-content;
-  animation: spin 2.5s linear infinite;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
 
   .github-loader-icon {
     background-color: $white;
     font-size: 4rem;
     clip-path: circle();
     border: none;
+    animation: spin 3s linear infinite;
+    margin: 0 auto;
+  }
+
+  .loading-text {
+    margin-top: 1rem;
+    margin-left: 1rem;
+    font-size: 2.5rem;
+    width: 100%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+  }
+
+  .loading-text::after {
+  }
+
+  .dots::after {
+    margin-left: 0.2rem;
+    content: "";
+    animation: addDots 3s linear infinite;
   }
 }
