--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -198,6 +198,12 @@ body {
   .Footer {
     padding: 12rem 32% 0 32%; } }
 
+.Home .loader {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
 .Home .show-more {
   text-align: center;
   text-decoration: none; }
@@ -352,6 +358,9 @@ body {
 .github-btn {
   margin-bottom: 3rem; }
 
+.portfolio-loader {
+  margin-top: 8rem; }
+
 .ProjectItem {
   cursor: pointer;
   margin-bottom: 2rem;
@@ -437,12 +446,37 @@ body {
   100% {
     transform: rotate(360deg); } }
 
+@keyframes addDots {
+  25% {
+    content: "."; }
+  50% {
+    content: ".."; }
+  75% {
+    content: "..."; }
+  100% {
+    content: ""; } }
+
 .ProjectLoader {
-  width: fit-content;
-  height: fit-content;
-  animation: spin 2.5s linear infinite; }
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%; }
   .ProjectLoader .github-loader-icon {
     background-color: #fff;
     font-size: 4rem;
     clip-path: circle();
-    border: none; }
+    border: none;
+    animation: spin 3s linear infinite;
+    margin: 0 auto; }
+  .ProjectLoader .loading-text {
+    margin-top: 1rem;
+    margin-left: 1rem;
+    font-size: 2.5rem;
+    width: 100%;
+    text-align: center;
+    display: flex;
+    justify-content: center; }
+  .ProjectLoader .dots::after {
+    margin-left: 0.2rem;
+    content: "";
+    animation: addDots 3s linear infinite; }
