Added database for page header information and timline information. Started work on severside sorting for timeline data.

--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -23,5 +23,6 @@
 @import "./../../components/pages/Home/Timeline/Timeline";
 @import "./../../components/pages/Home/Timeline/TimelineInfo/TimelineInfo";
 @import "./../../components/animations/ProjectLoader/ProjectLoader";
+@import "./../../components/Nav/NavLinks/ExternalNavLink/ExternalNavLink";
 
 // @import './../../components';
