--- a/src/components/Footer/_Footer.scss
+++ b/src/components/Footer/_Footer.scss
@@ -12,6 +12,11 @@
       font-size: 1.6rem;
       text-decoration: none;
       color: $black;
+      transition: all 0.2s;
+
+      &:hover {
+        color: $theme-btn-secondary;
+      }
     }
   }
 }
