--- a/src/styles/scss/_vars.scss
+++ b/src/styles/scss/_vars.scss
@@ -2,7 +2,7 @@ $white: #fff;
 $trans-white: #ffffffc7;
 $tags-bk: #f5f5f5;
 $theme-btn: #e5e7eb;
-$theme-btn-secondary: #7579e7;
+$theme-btn-secondary: #2666cf;
 $dark-mode-white: #dfdbdb;
 $dark-mode-main: #22272d;
 $green: #61b15a;
