--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -26,5 +26,6 @@
 @import "./../../components/Nav/NavLinks/ExternalNavLink/ExternalNavLink";
 @import "./../../components/Modals/Modal";
 @import "./../../components/Modals/ProjectDetailModal/ProjectDetailModal";
+@import "./../../components/Modals/ProjectDetailModal/ProjectLink/ProjectLink";
 
 // @import './../../components';
