--- a/src/components/Modals/_Modal.scss
+++ b/src/components/Modals/_Modal.scss
@@ -1,8 +1,7 @@
-.Backdrop, .Modal {
+.Backdrop,
+.Modal {
   position: fixed;
 }
-
-  
 
 .Modal {
   display: flex;
@@ -10,14 +9,14 @@
   align-items: center;
   width: 100%;
   height: 100vh;
-    z-index: 9998;
-  
+  z-index: 9998;
+
   .Backdrop {
-    background-color: rgba(#22272d, .7);
+    background-color: rgba(#22272d, 0.7);
     width: 100%;
     height: 100%;
   }
-  
+
   .ModalOverlay {
     background-color: $dark-mode-main;
     border: 1px solid $theme-btn-secondary;
@@ -26,18 +25,18 @@
     z-index: 9999;
     padding: 1.5rem;
 
-
     .header {
       display: flex;
       justify-content: space-between;
       align-items: center;
       width: 100%;
-      
-      .title-text, .close-icon {
+
+      .title-text,
+      .close-icon {
         color: $theme-btn-secondary;
         font-size: 3.5rem;
       }
-      
+
       .close-icon {
         font-size: 3rem;
         cursor: pointer;
@@ -46,3 +45,13 @@
   }
 }
 
+@media only screen and (max-width: 705px) {
+  .Modal {
+    .ModalOverlay {
+      width: 100%;
+      height: 100%;
+      border: none;
+      overflow-y: auto;
+    }
+  }
+}
